dark mode fix

--- a/main.scss
+++ b/main.scss
@@ -20,6 +20,7 @@
 body {
   background: var(--c-bg);
   line-height: 1;
+  color: var(--c-inverted);
 }
 
 svg  {
